# jeff-scraper

./: Cargo.toml  keybind.cfg  scrape.cfg
src/: app.rs  jeff.rs  keybind.rs  main.rs  scraper.rs
